# fuel-mirror

./: .coveragerc  .gitignore  .gitreview  HACKING.rst  MAINTAINERS  MANIFEST.in  README.md  README.rst  create_mirror  deb-mirror  fuel-createmirror  mirror-sync  requirements.txt  setup.cfg  setup.py  setup_hooks.py  test-requirements.txt  tox.ini
config/: common.cfg  config.mk  fuel.cfg  mos-ubuntu-updatesonly.cfg  mos-ubuntu.cfg  requirements-deb.txt  ubuntu.cfg
contrib/fuel_mirror/: MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
contrib/fuel_mirror/data/: centos.yaml  ubuntu.yaml
contrib/fuel_mirror/doc/source/: conf.py  contributing.rst  index.rst  installation.rst  usage.rst
contrib/fuel_mirror/etc/: config.yaml
contrib/fuel_mirror/fuel_mirror/: __init__.py  app.py
contrib/fuel_mirror/fuel_mirror/commands/: apply.py  base.py  create.py  update.py
contrib/fuel_mirror/fuel_mirror/common/: accessors.py  url_builder.py  url_parser.py  utils.py
contrib/fuel_mirror/fuel_mirror/schemas/: input_data_schema.py  validate_schema.py
contrib/fuel_mirror/fuel_mirror/tests/: base.py  test_accessors.py  test_cli_commands.py  test_url_builder.py  test_url_parser.py  test_utils.py  test_validate_config.py
contrib/fuel_mirror/fuel_mirror/tests/data/: test_centos.yaml  test_config.yaml  test_data.yaml  test_invalid_ubuntu.yaml  test_ubuntu.yaml
contrib/fuel_mirror/scripts/: fuel-createmirror
contrib/fuel_repo/: mos-mirrors-os  mos-mirrors-security  mos-mirrors-updates  mos-os.repo  mos-security.repo  mos-updates.repo
debian/: changelog  conffiles  control  copyright  postinst  postrm  python-fuel-mirror.install  python-fuel-mirror.postinst  rules
doc/source/: conf.py  index.rst  installation.rst  usage.rst
fuel_createmirror/: MANIFEST.in  config.yaml  requirements.txt  setup.py  test-requirements.txt  tox.ini
fuel_createmirror/fuel_createmirror/: actions.py  main.py  options.py
fuel_createmirror/fuel_createmirror/locations/: __init__.py  http.py  local.py  location.py
fuel_createmirror/fuel_createmirror/repositories/: __init__.py  conditions.py  deb.py  repository.py  utility.py
fuel_createmirror/fuel_createmirror/services/: cmd.py  curl.py  rsync.py
fuel_createmirror/fuel_createmirror/test/: __init__.py  test_locations.py  test_repository_deb.py  test_services_rsync.py
packetary/: __init__.py  api.py  openstack-common.conf  setup.cfg
packetary/cli/: app.py
packetary/cli/commands/: base.py  clone.py  packages.py  unresolved.py  utils.py
packetary/controllers/: __init__.py  repository.py
packetary/doc/source/: conf.py
packetary/drivers/: apt_driver.py  base.py  deb_driver.py  debian_driver.py  rpm_driver.py  yum_driver.py
packetary/objects/: __init__.py  base.py  index.py  package.py  package_relation.py  package_version.py  packages_tree.py  repository.py  statistics.py
packetary/tests/: base.py  test_apt_driver.py  test_checksums.py  test_cli_commands.py  test_command_utils.py  test_connections.py  test_deb_driver.py  test_debian_driver.py  test_executor.py  test_index.py  test_library_utils.py  test_objects.py  test_packages_tree.py  test_packetary.py  test_repository.py  test_repository_api.py  test_repository_contoller.py  test_rpm_driver.py  test_streams.py  test_yum_driver.py
packetary/tests/data/: Packages  Release  groups.xml  primary.xml  repomd.xml  repomd2.xml
packetary/tests/stubs/: connections.py  context.py  driver.py  executor.py  generator.py  helpers.py  package.py
perestroika/: .gitignore  build  build-deb.sh  build-fuel-deb.sh  build-fuel-rpm.sh  build-functions.sh  build-package.sh  build-rpm.sh  convert-version.py  convert_version.py  fuel-projects-list  simple-build-rpm.sh
perestroika/conf/: centos6.conf  centos7.conf  common.conf  jessie.conf  trusty.conf  xenial.conf
perestroika/conf/docker-builder-mock/: Dockerfile
perestroika/conf/docker-builder-sbuild/: 04tmpfs  Dockerfile  sbuild-key.sec
perestroika/docker-builder/: build-deb-package.sh  build-rpm-package.sh  config  create-deb-chroot.sh  create-rpm-chroot.sh  update-deb-chroot.sh  update-rpm-chroot.sh
perestroika/docker-builder/mockbuild/: Dockerfile  centos7.conf  centos71.conf  mock_configure.sh
perestroika/docker-builder/sbuild/: Dockerfile  jessie-amd64-aptsources  jessie-amd64-sbuild  precise-amd64-aptsources  precise-amd64-sbuild  sbuild-key.pub  trusty-amd64-aptsources  trusty-amd64-sbuild
perestroika/functions/: build-functions  cleanup-functions  docker-functions
perestroika/publisher.v5/: cmp_evr.py  publish-deb-binaries.sh  publish-rpm-binaries.sh  repoquerysrpm.py
perestroika/publisher.v5/functions/: locking.sh  publish-functions.sh  (+1 more)
repo-monitor/: check-deb-package.sh  check-package-functions.sh  check-rpm-package.sh  projects.txt  properties.sh
specs/: fuel-createmirror.spec  fuel-mirror.spec
util/: checksum.sh  dpkg-scanpackages  dpkg.patch  dpkg.sh  msgs.sh  parsePackages.py  parseSources.py  parse_yaml.py  partial_ubuntu.sh  regenerate_ubuntu_repo  rsync.sh
