[metadata]
name = packetary
version = 9.0.0
summary = The chain of tools to manage package`s lifecycle.
description-file =
    README.rst
author = Mirantis Inc.
author_email = product@mirantis.com
url = http://mirantis.com
home-page = http://mirantis.com
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: Utilities

[files]
packages =
    packetary

[entry_points]
console_scripts =
    packetary=packetary.cli.app:main

packetary.drivers =
    deb=packetary.drivers.deb_driver:DebRepositoryDriver
    rpm=packetary.drivers.rpm_driver:RpmRepositoryDriver

packetary =
    clone=packetary.cli.commands.clone:CloneCommand
    packages=packetary.cli.commands.packages:ListOfPackages
    unresolved=packetary.cli.commands.unresolved:ListOfUnresolved

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = packetary/locale
domain = packetary

[update_catalog]
domain = packetary
output_dir = packetary/locale
input_file = packetary/locale/packetary.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = packetary/locale/packetary.pot

[global]
setup-hooks =
    pbr.hooks.setup_hook
    setup_hooks.setup_hook
