[metadata]
name = fuel_mirror
summary = The Utility to create local repositories with packages is
          required for openstack deployment.
description-file =
    README.rst
author = Mirantis Inc.
author_email = product@mirantis.com
url = http://mirantis.com
home-page = http://mirantis.com
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Utilities

[files]
packages =
    fuel_mirror
data_files =
    etc/fuel-mirror = etc/*

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[entry_points]
console_scripts =
    fuel-mirror=fuel_mirror.app:main

fuel_mirror =
    apply=fuel_mirror.commands.apply:ApplyCommand
    create=fuel_mirror.commands.create:CreateCommand
    update=fuel_mirror.commands.update:UpdateCommand

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = locale
domain = fuel_mirror

[update_catalog]
domain = fuel_mirror
output_dir = locale
input_file = locale/fuel_mirror.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = locale/fuel_mirror.pot
